--- a/index.html
+++ b/index.html
@@ -183,8 +183,9 @@
             <div class="d-flex flex-column align-items-center">
                 <h4 id="result" style="border: solid 3px #827397; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
                 <div class="flex-row">
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; margin-top: 5px; color: #F0D9FF;" onclick="homeMenu(), sound(1)">Play again</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; margin-top: 5px; color: #F0D9FF;" onclick="playAgain(), sound(1)">Play again</button>
                     <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; margin-top: 5px;color: #F0D9FF">Next level</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; margin-top: 5px;color: #F0D9FF" onclick="homeMenu()">Home menu</button>
                 </div>
             </div>
             <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
