new sounds for butt

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <button onclick="division(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">/</button>
                         </div>
                         <div class="col d-flex flex-row">
-                            <button onclick = "clearInput(), sound(1)" class="col-5 mx-1 btn btn-danger btn-lg btn3d btnstl">clear</button>
+                            <button onclick = "clearInput(), sound(1)" class="col-5 mx-1 btn btn-danger btn-lg btn3d btnstl">Clear</button>
                             <button onclick = "numeros(0), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">0</button>
                             <button onclick = "multiplication(1), sound(1)"class="col mx-1 btn btn-primary btn-lg btn3d btnstl">*</button>
                         </div>
