--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <body style="background-color: #F0D9FF;">
     <!-- Home screen container start -->
-    <div id="homesn" class="container-fluid row min-vh-100">
+    <div id="homesn" class="container-fluid row min-vh-100 d-none">
     <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-center">
@@ -130,18 +130,18 @@
     <!-- Home screen container end -->
 
     <!-- Game screen container start-->
-    <div id="gamesn" class="d-none">
+    <div id="gamesn" class="container-fluid">
     <!-- <div id="gamesn" class="container-fluid d-none"> -->
         <div class="row min-vh-100 flex-column align-items-center justify-content-center">
-            <div class="d-flex flex-column flex-sm-row align-items-center">
+            <div class="row flex-column flex-sm-row align-items-center">
+                <div class="">
+                        <button class="col mx-1 btn btn-lg btnstl">Back</button>
+                </div>
                 <div class="col d-flex flex-column align-items-center">
                     <div>
                         <h1 class="" style="color:#827397; font-size: 8vw; ">MathMate</h1>
                         <h2 class="p-2 bg-body box-shadow shadow rounded" id="task" style="color: #4D4C7D; font-size: 20px;">ㅤ</h2>
                     </div>
-                    
-                </div>
-                <div class="col d-flex flex-column align-items-center">
                     <div>
                         <div class="col d-flex flex-row">
                             <button onclick="numeros(1), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">1</button>
@@ -167,8 +167,16 @@
                             <button onclick = "multiplication(1), sound(1)"class="col mx-1 btn btn-primary btn-lg btn3d btnstl">*</button>
                         </div>
                         <div class="col d-flex flex-row">
-                            <button onclick="checkAnswer(), sound(1)" class="col mx-1 btn px-5 btn-success btn-lg btn3d btnstl" id="enter">Enter</button>
+                            <button onclick="checkAnswer(), sound(1)" class="col mx-1 btn px-5 btn-success btn-lg btn3d btnstl">Enter</button>
                         </div>
+                        <div class="col d-flex flex-row">
+                            <button onclick="checkAnswer(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Backspace</button>
+                            <button onclick="checkAnswer(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Level</button>                        </div>
+                    </div>
+                </div>
+                <div class="col d-flex flex-column align-items-center">
+                    <div>
+                        <img class="img-fluid" src="./images/emoji.png" alt="emoji" style="margin-top: 40px;"/>
                     </div>
                 </div>
             </div>
