--- a/index.html
+++ b/index.html
@@ -69,12 +69,20 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: #371B58;
         }
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+        input[type=number] {
+            -moz-appearance: textfield;
+        }
     </style>
 </head>
 
 <body style="background-color: #F0D9FF;">
     <!-- Home screen container start -->
-    <div id="homesn" class="container-fluid row min-vh-100">
+    <div id="homesn" class="container-fluid row min-vh-100 d-none">
     <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-center">
@@ -118,7 +126,6 @@
                             </div>
                         </div>
                     <!-- End Modal -->                              
-                
                 </div>
             </div>
             <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
@@ -140,8 +147,13 @@
                 <div class="col d-flex flex-column align-items-center">
                     <div>
                         <h1 class="" style="color:#827397; font-size: 8vw; ">MathMate</h1>
-                        <h2 class="p-2 bg-body box-shadow shadow rounded" id="task" style="color: #4D4C7D; font-size: 20px;">ㅤ</h2>
-                    </div>
+                        <div class="input-group mb-3">
+                            <div id="task" class="input-group-text">
+                                ㅤ
+                            </div>
+                            <input type="numberd" class="form-control" placeholder="" aria-label="" aria-describedby="button-addon2">
+                        </div>
+                    </div>                   
                     <div>
                         <div class="col d-flex flex-row">
                             <button onclick="numeros(1), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">1</button>
@@ -167,11 +179,12 @@
                             <button onclick = "multiplication(1), sound(1)"class="col mx-1 btn btn-primary btn-lg btn3d btnstl">*</button>
                         </div>
                         <div class="col d-flex flex-row">
-                            <button onclick="checkAnswer(), sound(1)" class="col mx-1 btn px-5 btn-success btn-lg btn3d btnstl">Enter</button>
+                            <button onclick="checkAnswer(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Enter</button>
                         </div>
                         <div class="col d-flex flex-row">
                             <button onclick="checkAnswer(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Backspace</button>
-                            <button onclick="checkAnswer(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Level</button>                        </div>
+                            <button onclick="checkAnswer(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Level</button>                        
+                        </div>
                     </div>
                 </div>
                 <div class="col d-flex flex-column align-items-center">
