added next level button function

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <h4 id="result" style="border: solid 3px #6e609f; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
                 <div class="flex-row">
                     <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;" onclick="playAgain(), sound(1)">Play again</button>
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF">Next level</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="levelSwitch(), sound(1), gameStart()">Next level</button>
                     <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="homeMenu()">Home menu</button>
                 </div>
             </div>
