fixed home screen when open

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <!-- Home screen container end -->
 
     <!-- Game screen container start-->
-    <div id="gamesn" class="container-fluid">
+    <div id="gamesn" class="container-fluid d-none">
     <!-- <div id="gamesn" class="container-fluid d-none"> -->
         <div class="row min-vh-100 flex-column align-items-center justify-content-center">
             <div class="row flex-column flex-sm-row align-items-center">
