--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <body style="background-color: #F0D9FF;">
     <!-- Home screen container start -->
-    <div id="homesn" class="container-fluid row min-vh-100 d-none">
+    <div id="homesn" class="container-fluid row min-vh-100">
     <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-center">
