game scene back button update

--- a/index.html
+++ b/index.html
@@ -132,11 +132,13 @@
     <!-- Game screen container start-->
     <div id="gamesn" class="container-fluid d-none">
     <!-- <div id="gamesn" class="container-fluid d-none"> -->
-        <div class="row min-vh-100 flex-column align-items-center justify-content-center">
-            <div class="row flex-column flex-sm-row align-items-center">
-                <div class="">
-                        <button onclick="back()" class="col mx-1 btn btn-lg btnstl">Back</button>
-                </div>
+        <div class="row min-vh-100 flex-column ">
+            <br>
+            <div class="flex-row">
+                <button onclick="back()" class="col mx-1 btn btn-lg btnstl" class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Back</button>
+        </div> <br>
+            <div class="row flex-column flex-sm-row align-items-center justify-content-center">
+                
                 <div class="col d-flex flex-column align-items-center">
                     <div>
                         <h1 class="" style="color:#a17ed2; font-size: 8vw;">MathMate</h1>
