--- a/index.html
+++ b/index.html
@@ -156,22 +156,22 @@
                     </div>                   
                     <div>
                         <div class="col d-flex flex-row">
-                            <button onclick="numeros(1), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">1</button>
-                            <button onclick="numeros(2), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">2</button>
-                            <button onclick="numeros(3), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">3</button>
-                            <button onclick="plus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">+</button>
+                            <button onclick="numeros(1), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="one">1</button>
+                            <button onclick="numeros(2), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="two">2</button>
+                            <button onclick="numeros(3), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="three">3</button>
+                            <button onclick="plus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="plus">+</button>
                         </div>
                         <div class="col d-flex flex-row">
-                            <button onclick="numeros(4), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">4</button>
-                            <button onclick="numeros(5), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">5</button>
-                            <button onclick="numeros(6), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">6</button>
-                            <button onclick="minus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">-</button>
+                            <button onclick="numeros(4), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="four">4</button>
+                            <button onclick="numeros(5), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="five">5</button>
+                            <button onclick="numeros(6), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="six">6</button>
+                            <button onclick="minus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="minus">-</button>
                         </div>
                         <div class="col d-flex flex-row">
-                            <button onclick="numeros(7), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">7</button>
-                            <button onclick="numeros(8), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">8</button>
-                            <button onclick="numeros(9), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">9</button>
-                            <button onclick="division(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">/</button>
+                            <button onclick="numeros(7), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="seven">7</button>
+                            <button onclick="numeros(8), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="eight">8</button>
+                            <button onclick="numeros(9), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="nine">9</button>
+                            <button onclick="division(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="ten">/</button>
                         </div>
                         <div class="col d-flex flex-row">
                             <button onclick = "clearInput(), sound(1)" class="col-5 mx-1 btn btn-danger btn-lg btn3d btnstl">Clear</button>
