added style css file

--- a/index.html
+++ b/index.html
@@ -7,77 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css">
     <script src="game.js"></script>
     <script src="scene_switcher.js"></script>
-    <style>
-        .btn3d {
-            position: relative;
-            top: -6px;
-            border: 0;
-            transition: all 20ms linear;
-            margin-top: 8px;
-            margin-bottom: 5px;
-            margin-left: 1px;
-            margin-right: 1px;
-        }
-            .btn3d:active:focus,
-            .btn3d:focus:hover,
-            .btn3d:focus {
-            -moz-outline-style: none;
-            outline: medium none;
-        }
-
-            .btn3d:active,
-            .btn3d.active {
-            top: 2px;
-        }
-            .btn3d.btn-success {
-            box-shadow: 0 0 0 1px #7a62b5 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #584c8e, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
-            background-color: #7a62b5;
-        }
-
-            .btn3d.btn-success:active,
-            .btn3d.btn-success.active {
-            box-shadow: 0 0 0 1px #7a62b5 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
-            background-color: #7a62b5;
-        }
-
-            .btn3d.btn-primary {
-            box-shadow: 0 0 0 1px #9078b3 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #8069a0, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
-            background-color: #9d84c3;
-        }
-
-            .btn3d.btn-primary:active,
-            .btn3d.btn-primary.active {
-            box-shadow: 0 0 0 1px #9d84c3 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
-            background-color: #9d84c3;
-        }
-            .btn3d.btn-danger {
-            box-shadow: 0 0 0 1px #4a2375 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #4a2772, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
-            background-color: #63398f;
-        }
-
-            .btn3d.btn-danger:active,
-            .btn3d.btn-danger.active {
-            box-shadow: 0 0 0 1px #4a2375 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
-            background-color: #63398f;
-        }
-
-    </style>
-    <style>
-        .btnstl {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: #1f0e34;
-        }
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-        input[type=number] {
-            -moz-appearance: textfield;
-        }
-    </style>
 </head>
 
 <body style="background-color: #F0D9FF;">
