logo icon designed and placed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="game.js"></script>
     <script src="scene_switcher.js"></script>
+    <link rel="icon" href="./images/Screenshot_8-removebg-preview.png" type="image/icon type">
 </head>
 
 <body style="background-color: #F0D9FF;">
