--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="game.js"></script>
     <script src="scene_switcher.js"></script>
-    <link rel="icon" href="./images/Screenshot_8-removebg-preview.png" type="image/icon type">
+    <link rel="icon" href="./images/FavLogo.png" type="image/icon type">
 </head>
 
 <body style="background-color: #F0D9FF;">
@@ -19,7 +19,7 @@
     <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-center">
-                <h1 class="text-center" style="color:#a17ed2; font-size: 12vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1>
+                <h1 class="text-center title">MathMate</h1>
                 <div class="d-flex flex-row align-items-center justify-content-center">
                     <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;" onclick="gameStart(), sound(1)">Play</button>
                     <button onclick="sound(2)" class="btn mx-1 btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;">Info</button>    
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
-                <img class="img-fluid" src="./images/emoji.png" alt="emoji" style="margin-top: 40px;"/>
+                <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;"/>
             </div>
         </div>
     </div>
@@ -73,40 +73,25 @@
     <div id="gamesn" class="container-fluid d-none">
     <!-- <div id="gamesn" class="container-fluid d-none"> -->
         <div class="row min-vh-100 flex-column ">
-            <br>
             <div class="flex-row">
                 <button onclick="back()" class="col mx-1 btn btn-lg btnstl" class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Back</button>
-        </div> <br>
-            <div class="row flex-column flex-sm-row align-items-center justify-content-center">
-                <div class="col d-flex flex-column align-items-center">
-                    <div>
-                        <h1 class="" style="color:#827397; font-size: 8vw; ">MathMate</h1>
-                    </div>                   
-                    <div class="border border-primary p-2 rounded-2">          
+            </div>
+                <div class="row flex-column flex-sm-row align-items-center justify-content-center">
+                    <div class="col d-flex flex-column align-items-center">
                         <div>
-                            <div class="input-group mb-3">
-                                <div id="task" class="input-group-text">
-                                    ㅤ
-                                </div>
-                                <input id="userInput" type="number" class="form-control" placeholder="Your answer" aria-label="Answer" aria-describedby="button-addon2">
+                            <h1 class="title">MathMate</h1>
+                        </div>            
+                    <div>
+                        <div class="input-group mb-3">
+                            <div id="task" class="input-group-text">
+                                ㅤ
                             </div>
-                        </div> 
-                        <div class="col d-flex flex-row">
-                            <button onclick="numeros(1), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="one">1</button>
-                            <button onclick="numeros(2), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="two">2</button>
-                            <button onclick="numeros(3), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="three">3</button>
-                            <button onclick="plus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="plus">+</button>
+                            <input id="userInput" type="number" class="form-control" placeholder="Your answer" aria-label="Answer" aria-describedby="button-addon2">
                         </div>
-                        <div class="col d-flex flex-row">
-                            <button onclick="numeros(4), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="four">4</button>
-                            <button onclick="numeros(5), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="five">5</button>
-                            <button onclick="numeros(6), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="six">6</button>
-                            <button onclick="minus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="minus">-</button>
-                        </div>
-                        <div class="col d-flex flex-row">
-                            <button onclick="numeros(7), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="seven">7</button>
-                            <button onclick="numeros(8), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="eight">8</button>
-                            <button onclick="numeros(9), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="nine">9</button>
+                    </div>
+                    <div class="col d-flex flex-row">
+                        <button onclick="numeros(1), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="one">1</button>
+                         umeros(9), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="nine">9</button>
                             <button onclick="division(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="ten">/</button>
                         </div>
                         <div class="col d-flex flex-row">
@@ -119,12 +104,26 @@
                         </div>
                         <div class="col d-flex flex-row">
                             <button onclick="backspace(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Backspace</button>
-                            <button id="levelButton" onclick="sound(1), levelSwitch()" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Level</button>                        </div>
+                        <butto   <button onclick="numeros(2), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="two">2</button>
+                        <button onclick="numeros(3), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="three">3</button>
+                        <button onclick="plus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="plus">+</button>
                     </div>
+                    <div class="col d-flex flex-row">
+                        <button onclick="numeros(4), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="four">4</button>
+                        <button onclick="numeros(5), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="five">5</button>
+                        <button onclick="numeros(6), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="six">6</button>
+                        <button onclick="minus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="minus">-</button>
+                    </div>
+                    <div class="col d-flex flex-row">
+                        <button onclick="numeros(7), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="seven">7</button>
+                        <button onclick="numeros(8), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="eight">8</button>
+                        <button onclick="nn" id="levelButton" onclick="sound(1), levelSwitch()" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Level</button>                        </div>
+                    </div>
+                </div>
                 </div>
                 <div class="col d-flex flex-column align-items-center">
                     <div>
-                        <img class="img-fluid" src="./images/emoji.png" alt="emoji" style="margin-top: 40px;"/>
+                        <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;"/>
                     </div>
                 </div>
             </div>
@@ -134,22 +133,21 @@
     <!-- Game screen container end-->
 
     <!-- End screen container start-->
-    <div id="endsn" class="d-none">
-        <div class="row min-vh-100 flex-column align-items-center justify-content-center">
-            <div class="d-flex flex-column align-items-center">
-                <h4 id="result" style="border: solid 3px #6e609f; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
-                <div class="flex-row">
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;" onclick="playAgain(), sound(1)">Play again</button>
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="levelSwitch(), sound(1), gameStart()">Next level</button>
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="homeMenu()">Home menu</button>
+        <div id="endsn" class="d-none">
+            <div class="row min-vh-100 flex-column align-items-center justify-content-center">
+                <div class="d-flex flex-column align-items-center">
+                    <h4 id="result" style="border: solid 3px #6e609f; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
+                    <div class="flex-row">
+                        <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;" onclick="playAgain(), sound(1)">Play again</button>
+                        <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="levelSwitch(), sound(1), gameStart()">Next level</button>
+                        <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="homeMenu()">Home menu</button>
+                    </div>
+                </div>
+                <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
+                    <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;"/>
                 </div>
             </div>
-            <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
-                <img class="img-fluid" src="./images/emoji.png" alt="emoji" style="margin-top: 40px;"/>
-            </div>
         </div>
-      </div>
     <!-- End screen container end -->
-</body>
-
+    </body>
 </html>
