--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body style="background-color: #F0D9FF;">
     <!-- Home screen container start -->
-    <div id="homesn" class="container-fluid row min-vh-100">
-        <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
-        <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
+    <div id="homesn" class="container-fluid min-vh-100 align-items-center justify-content-center d-flex">
+    <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
+        <div class="d-flex row flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <h1 class="text-center title">MathMate</h1>
                 <div class="d-flex flex-row align-items-center justify-content-center">
@@ -75,6 +75,9 @@
                     <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;" />
                 </div>
             </div>
+            <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
+                <img class="img-fluid" src="./images/Screenshot_9-removebg-preview.png" alt="emoji" style="margin-top: 40px;"/>
+            </div>
         </div>
     </div>
     <!-- Home screen container end -->
@@ -82,7 +85,7 @@
     <!-- Game screen container start-->
     <div id="gamesn" class="container-fluid d-none">
         <!-- <div id="gamesn" class="container-fluid d-none"> -->
-        <div class="min-vh-100 flex-column">
+            <div class="row min-vh-100 flex-column justify-content-center align-items-center">
             <div class="flex-row pt-2">
                 <div class="d-flex mb-2 justify-content-between align-items-center">
                     <button onclick="back()" class="mx-1 p-2 btn btn-lg btnstl"
@@ -94,7 +97,7 @@
             <div class="d-flex justify-content-center">
                 <h1 class="title">MathMate</h1>
             </div>
-            <div class="row d-flex flex-column flex-sm-row align-items-center justify-content-center">
+            <div class="row flex-column flex-sm-row align-items-center justify-content-center">
                 <div class="col d-flex flex-column align-items-center">
                     <div class="p-2 shadow rounded align-self-center" style="background-color: #9876c9;">
                         <div class="input-group mb-3">
@@ -166,26 +169,17 @@
 
     <!-- End screen container start-->
     <div id="endsn" class="d-none">
-        <div class="row min-vh-100 flex-column align-items-center justify-content-center">
-            <div class="d-flex flex-column align-items-center">
-                <h4 id="result"
-                    style="border: solid 3px #6e609f; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">
-                    Result: 2/5</h4>
-                <div class="flex-row">
-                    <button class="btn mx-1 btn-light btn-lg"
-                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;"
-                        onclick="playAgain(), sound(1)">Play again</button>
-                    <button class="btn mx-1 btn-light btn-lg"
-                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF"
-                        onclick="levelSwitch(), sound(1), gameStart()">Next level</button>
-                    <button class="btn mx-1 btn-light btn-lg"
-                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF"
-                        onclick="homeMenu()">Home menu</button>
+        <div class="container d-flex min-vh-100 flex-column align-items-center justify-content-center">
+            <div class="row align-items-center justify-content-center">
+                <h4 id="result" style="border: solid 3px #6e609f; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;" class="col-6">Result: 2/5</h4>
+                <div class="row flex-md-row flex-column align-items-center">
+                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;" onclick="playAgain(), sound(1)">Play again</button>
+                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg " style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="levelSwitch(), sound(1), gameStart()">Next level</button>
+                    <button class=" col-xs-9 mx-md-1 col btn btn-light btn-lg " style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="homeMenu()">Home menu</button>
                 </div>
             </div>
-            <div
-                class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
-                <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;" />
+            <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
+                <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;"/>
             </div>
         </div>
     </div>
