--- a/index.html
+++ b/index.html
@@ -82,17 +82,21 @@
     <!-- Game screen container start-->
     <div id="gamesn" class="container-fluid d-none">
         <!-- <div id="gamesn" class="container-fluid d-none"> -->
-        <div class="row min-vh-100 flex-column ">
-            <div class="flex-row">
-                <button onclick="back()" class="col mx-1 btn btn-lg btnstl" class="btn mx-1 btn-light btn-lg"
-                    style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Back</button>
+        <div class="min-vh-100 flex-column">
+            <div class="flex-row pt-2">
+                <div class="d-flex mb-2 justify-content-between align-items-center">
+                    <button onclick="back()" class="mx-1 p-2 btn btn-lg btnstl"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Back</button>
+                    <button onclick="" class="mx-1 p-2 btn btn-lg btnstl"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Mute</button>
+                </div>
             </div>
-            <div class="row flex-column flex-sm-row align-items-center justify-content-center">
+            <div class="d-flex justify-content-center">
+                <h1 class="title">MathMate</h1>
+            </div>
+            <div class="row d-flex flex-column flex-sm-row align-items-center justify-content-center">
                 <div class="col d-flex flex-column align-items-center">
-                    <div class="col d-flex flex-column">
-                        <h1 class="title">MathMate</h1>
-                    </div>
-                    <div class="border border-primary rounded">
+                    <div class="p-2 shadow rounded align-self-center" style="background-color: #9876c9;">
                         <div class="input-group mb-3">
                             <div id="task" class="input-group-text">
                                 ㅤ
@@ -151,10 +155,10 @@
                     </div>
                 </div>
                 <div class="col d-flex flex-column align-items-center">
-                        <div>
-                            <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;" />
-                        </div>
+                    <div>
+                        <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;" />
                     </div>
+                </div>
             </div>
         </div>
     </div>
