home scene image fixed

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div
-                    class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
+                    class="d-flex col-8 align-self-center justify-content-center">
                     <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;" />
                 </div>
             </div>
