--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div id="gamesn" class="container-fluid d-none">
         <!-- <div id="gamesn" class="container-fluid d-none"> -->
             <div class="row min-vh-100 flex-column justify-content-center align-items-center">
-            <div class="flex-row pt-2">
+            <div class="flex-row pt-2 fixed-top">
                 <div class="d-flex mb-2 justify-content-between align-items-center">
                     <button onclick="back()" class="mx-1 p-2 btn btn-lg btnstl"
                         style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Back</button>
