--- a/index.html
+++ b/index.html
@@ -21,12 +21,8 @@
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <h1 class="text-center title">MathMate</h1>
                 <div class="d-flex flex-row align-items-center justify-content-center">
-                    <button class="btn mx-1 btn-light btn-lg"
-                        style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;"
-                        onclick="gameStart(), sound(1)">Play</button>
-                    <button onclick="sound(2)" class="btn mx-1 btn-light btn-lg" data-bs-toggle="modal"
-                        data-bs-target="#staticBackdrop"
-                        style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;">Info</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;" onclick="gameStart(), sound(1)">Play</button>
+                    <button class="btn mx-1 btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;" onclick="sound(2)">Info</button>    
 
                     <!-- Modal -->
                     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
@@ -171,8 +167,8 @@
             <div class="row align-items-center justify-content-center">
                 <h4 id="result" style="border: solid 3px #6e609f; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;" class="col-6">Result: 2/5</h4>
                 <div class="row flex-md-row flex-column align-items-center">
-                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;" onclick="playAgain(), sound(1)">Play again</button>
-                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg " style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="levelSwitch(), sound(1), gameStart()">Next level</button>
+                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;" onclick="sound(1), gameStart()" id="playAgain">Play again</button>
+                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg " style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="sound(1), nextLevelF()" id="nextLevel">Next level</button>
                     <button class=" col-xs-9 mx-md-1 col btn btn-light btn-lg " style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="homeMenu()">Home menu</button>
                 </div>
             </div>
