--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <div class="d-flex mb-2 justify-content-between align-items-center">
                     <button onclick="back()" class="mx-1 p-2 btn btn-lg btnstl"
                         style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Back</button>
-                    <button onclick="" class="mx-1 p-2 btn btn-lg btnstl"
-                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Mute</button>
+                    <button id="soundButton" onclick="soundTurn(), sound(1)" class="mx-1 p-2 btn btn-lg btnstl"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Sound: ON</button>
                 </div>
             </div>
             <div class="d-flex justify-content-center">
