Fixed button colors

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </div>
                         <div class="d-flex">
                             <button onclick="clearInput(), sound(1)"
-                                class="col-5 mx-1 btn btn-danger btn-lg btn3d btnstl">Clear</button>
+                                class="col-5 mx-1 btn btn-success btn-lg btn3d btnstl">Clear</button>
                             <button onclick="numeros(0), sound(1)"
                                 class="col mx-1 btn btn-primary btn-lg btn3d btnstl">0</button>
                             <button onclick="multiplication(1), sound(1)"
@@ -139,13 +139,13 @@
                         </div>
                         <div class="d-flex">
                             <button onclick="checkAnswer(), sound(1)"
-                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Enter</button>
+                                class="col mx-1 btn btn-danger btn-lg btn3d btnstl">Enter</button>
                         </div>
                         <div class="d-flex">
                             <button onclick="backspace(), sound(1)"
-                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Backspace</button>
+                                class="col mx-1 btn btn-success btn-lg btn3d btnstl">Backspace</button>
                             <button id="levelButton" onclick="sound(1), levelSwitch()"
-                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Level</button>
+                                class="col mx-1 btn btn-success btn-lg btn3d btnstl">Level</button>
                         </div>
                     </div>
                 </div>
