changed id names

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             <div class="row align-items-center justify-content-center">
                 <h4 id="result" style="border: solid 3px #6e609f; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;" class="col-6">Result: 2/5</h4>
                 <div class="row flex-md-row flex-column align-items-center">
-                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;" onclick="sound(1), gameStart()" id="playAgain">Play again</button>
-                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg " style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="sound(1), nextLevelF()" id="nextLevel">Next level</button>
+                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;" onclick="sound(1), gameStart()" id="playAgainButton">Play again</button>
+                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg " style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="sound(1), nextLevelF()" id="nextLevelButton">Next level</button>
                     <button class=" col-xs-9 mx-md-1 col btn btn-light btn-lg " style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="homeMenu()">Home menu</button>
                 </div>
             </div>
