--- a/index.html
+++ b/index.html
@@ -107,49 +107,49 @@
                         </div>
                         <div class="d-flex">
                             <button onclick="numeros(1), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="one">1</button>
+                                id="1">1</button>
                             <button onclick="numeros(2), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="two">2</button>
+                                id="2">2</button>
                             <button onclick="numeros(3), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="three">3</button>
+                                id="3">3</button>
                             <button onclick="plus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="plus">+</button>
+                                id="+">+</button>
                         </div>
                         <div class="d-flex">
                             <button onclick="numeros(4), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="four">4</button>
+                                id="4">4</button>
                             <button onclick="numeros(5), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="five">5</button>
+                                id="5">5</button>
                             <button onclick="numeros(6), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="six">6</button>
+                                id="6">6</button>
                             <button onclick="minus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="minus">-</button>
+                                id="-">-</button>
                         </div>
                         <div class="d-flex">
                             <button onclick="numeros(7), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="seven">7</button>
+                                id="7">7</button>
                             <button onclick="numeros(8), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="eight">8</button>
+                                id="8">8</button>
                             <button onclick="numeros(9), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="nine">9</button>
+                                id="9">9</button>
                             <button onclick="division(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="ten">/</button>
+                                id="/">/</button>
                         </div>
                         <div class="d-flex">
                             <button onclick="clearInput(), sound(1)"
-                                class="col-5 mx-1 btn btn-success btn-lg btn3d btnstl">Clear</button>
+                                class="col-5 mx-1 btn btn-success btn-lg btn3d btnstl" id="f">Clear</button>
                             <button onclick="numeros(0), sound(1)"
-                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl">0</button>
+                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="0">0</button>
                             <button onclick="multiplication(1), sound(1)"
-                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl">*</button>
+                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="*">*</button>
                         </div>
                         <div class="d-flex">
                             <button onclick="checkAnswer(), sound(1)"
-                                class="col mx-1 btn btn-danger btn-lg btn3d btnstl">Enter</button>
+                                class="col mx-1 btn btn-danger btn-lg btn3d btnstl" id="enter">Enter</button>
                         </div>
                         <div class="d-flex">
                             <button onclick="backspace(), sound(1)"
-                                class="col mx-1 btn btn-success btn-lg btn3d btnstl">Backspace</button>
+                                class="col mx-1 btn btn-success btn-lg btn3d btnstl" id="backspace">Backspace</button>
                             <button id="levelButton" onclick="sound(1), levelSwitch()"
                                 class="col mx-1 btn btn-success btn-lg btn3d btnstl">Level</button>
                         </div>
