Double digits on focus fix

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="p-2 shadow rounded align-self-center justify-content-center mw-50" style="background-color: #9876c9">
             <div class="input-group mb-3 shadow-sm">
               <span id="task" class="input-group-text px-2 justify-content-center btnstl" style="width: 22vw;"></span>
-              <input id="userInput" type="number" class="form-control btnstl" placeholder="Your answer" aria-label="Answer" aria-describedby="button-addon2">
+              <input id="userInput" type="number" class="form-control btnstl" placeholder="Your answer" aria-label="Answer" aria-describedby="button-addon2" readonly>
             </div>
             <div class="d-flex">
               <button onclick="numeros(1), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
