reset points and rounds

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 id="2">2</button>
               <button onclick="numeros(3), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
                 id="3">3</button>
-              <button onclick="plus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="+">+</button>
+              <button onclick="plus(), sound(1), reset()" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="+">+</button>
             </div>
             <div class="d-flex">
               <button onclick="numeros(4), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
@@ -115,7 +115,7 @@
                 id="5">5</button>
               <button onclick="numeros(6), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
                 id="6">6</button>
-              <button onclick="minus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="-">-</button>
+              <button onclick="minus(), sound(1), reset()" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="-">-</button>
             </div>
             <div class="d-flex">
               <button onclick="numeros(7), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
@@ -124,7 +124,7 @@
                 id="8">8</button>
               <button onclick="numeros(9), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
                 id="9">9</button>
-              <button onclick="division(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+              <button onclick="division(), sound(1), reset()" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
                 id="/">÷</button>
             </div>
             <div class="d-flex">
@@ -132,7 +132,7 @@
                 id="c">Clear</button>
               <button onclick="numeros(0), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
                 id="0">0</button>
-              <button onclick="multiplication(1), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+              <button onclick="multiplication(1), sound(1), reset()" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
                 id="*">×</button>
             </div>
             <div class="d-flex">
