a lot of things

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <button class="btn mx-1 mt-1 btn-light btn-lg startbtn dropdown-toggle" onclick="sound(1)" data-bs-toggle="dropdown">Modes</button>
   
           <ul class="dropdown-menu dropdown-menu-dark">
-            <li><a class="dropdown-item btn btn-lg" onclick="switchMode(0)">Action</a></li>
-            <li><a class="dropdown-item btn btn-lg" onclick="switchMode(1)">Another action</a></li>
-            <li><a class="dropdown-item btn btn-lg" onclick="switchMode(2)">Something else here</a></li>
+            <li><a class="dropdown-item btn btn-lg" onclick="switchMode(0)">Normal</a></li>
+            <div class="dropdown-divider"></div>
+            <li><a class="dropdown-item btn btn-lg" onclick="switchMode(2)">Extream mode</a></li>
           </ul>
         
 
