--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <button class="btn mx-1 mt-1 btn-light btn-lg startbtn" onclick="sound(1)" data-bs-toggle="dropdown" id="modesButton">Normal</button>
   
           <ul class="dropdown-menu dropdown-menu-dark">
-            <li><a class="dropdown-item btn btn-lg" onclick="switchMode(0), sound(1)">Normal</a></li>
+            <li><a class="dropdown-item btn btn-lg" onclick="switchMode(0), sound(1)">Normal Mode</a></li>
             <div class="dropdown-divider"></div>
-            <li><a class="dropdown-item btn btn-lg" onclick="switchMode(2), sound(1)">Extream mode</a></li>
+            <li><a class="dropdown-item btn btn-lg" onclick="switchMode(2), sound(1)">Extreme Mode</a></li>
           </ul>
         
 
